# LDMS

./: .gitignore  .logs  .replit  README.md  __functions__.py  index.html  main.py  pyproject.toml  replit.nix  settings.py
Databases/: Rederal  world.py
